PROJECT(GVTOPTIX)
cmake_minimum_required(VERSION 2.6)
SET(GVT_BE_OPTIX OFF CACHE BOOL "Build Optix Backend")

IF (GVT_BE_OPTIX)
    FIND_PACKAGE(CUDA REQUIRED)
    FIND_PACKAGE(OptiX REQUIRED)
    
    INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
    INCLUDE_DIRECTORIES(${CUDA_INCLUDE_DIRS})

    FILE(GLOB_RECURSE GVT_BE_OPTIX_SRC ${PROJECT_SOURCE_DIR}/*.cpp ${PROJECT_SOURCE_DIR}/*.C)
    FILE(GLOB_RECURSE GVT_BE_OPTIX_HDR ${PROJECT_SOURCE_DIR}/*.h ${PROJECT_SOURCE_DIR}/*.hpp)

    INCLUDE_DIRECTORIES(${GVTCORE_INCLUDE_DIRS})

    ADD_LIBRARY(${PROJECT_NAME} STATIC ${GVT_BE_OPTIX_SRC} ${GVT_BE_OPTIX_HDR})
    #SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES POSITION_INDEPENDENT_CODE ON)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} GVTCORE ${MPI_LIBRARIES}) 
    SET(${PROJECT_NAME}_INCLUDE_DIRS ${PROJECT_SOURCE_DIR} ${GVTCORE_INCLUDE_DIRS} CACHE INTERNAL "${PROJECT_NAME}: Include Directories" FORCE)

    CONFIGURE_LIB_MPI()

ENDIF()
