PROJECT(GVTCONFFILE)
cmake_minimum_required(VERSION 2.8)
SET(GVT_FE_CONFFILE OFF CACHE BOOL "Build ConfigFile Frontend")


IF (GVT_FE_CONFFILE)
    FIND_PACKAGE(Manta)

    INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

    FILE(GLOB_RECURSE GVT_FE_CONFFILE_SRC ${PROJECT_SOURCE_DIR}/*.cpp ${PROJECT_SOURCE_DIR}/*.C)
    FILE(GLOB_RECURSE GVT_FE_CONFFILE_HDR ${PROJECT_SOURCE_DIR}/*.h ${PROJECT_SOURCE_DIR}/*.hpp)

    INCLUDE_DIRECTORIES(${GVTCORE_INCLUDE_DIRS})
    INCLUDE_DIRECTORIES(${GVTMANTA_INCLUDE_DIRS})

    ADD_LIBRARY(${PROJECT_NAME} SHARED ${GVT_FE_CONFFILE_SRC} ${GVT_FE_CONFFILE_HDR})
#    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES POSITION_INDEPENDENT_CODE ON)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} GVTCORE GVTMANTA ${MPI_LIBRARIES}) 
    SET(${PROJECT_NAME}_INCLUDE_DIRS ${PROJECT_SOURCE_DIR} ${GVTCORE_INCLUDE_DIRS} CACHE INTERNAL "${PROJECT_NAME}: Include Directories" FORCE)

    CONFIGURE_LIB_MPI()

ENDIF()
