PROJECT(GVTGLURAY)
cmake_minimum_required(VERSION 2.6)
SET(GVT_FE_GLURAY OFF CACHE BOOL "Build ConfigFile Frontend")
IF (GVT_FE_GLURAY)
	
	INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

        FILE(GLOB_RECURSE GVT_FE_GLURAY_SRC ${PROJECT_SOURCE_DIR}/*.cpp ${PROJECT_SOURCE_DIR}/*.C)
        FILE(GLOB_RECURSE GVT_FE_GLURAY_HDR ${PROJECT_SOURCE_DIR}/*.h ${PROJECT_SOURCE_DIR}/*.hpp)

        INCLUDE_DIRECTORIES(${GVTCORE_INCLUDE_DIRS})

        ADD_LIBRARY(${PROJECT_NAME} SHARED ${GVT_FE_GLURAY_SRC} ${GVT_FE_GLURAY_HDR})
        #SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES POSITION_INDEPENDENT_CODE ON)
        TARGET_LINK_LIBRARIES(${PROJECT_NAME} GVTCORE ${MPI_LIBRARIES}) 
        SET(${PROJECT_NAME}_INCLUDE_DIRS ${PROJECT_SOURCE_DIR} ${GVTCORE_INCLUDE_DIRS} CACHE INTERNAL "${PROJECT_NAME}: Include Directories" FORCE)

        CONFIGURE_LIB_MPI()


ENDIF()
