PROJECT(GLtrace)

MESSAGE(STATUS "---> GLtrace")
IF(NOT GVT_BE_MANTA)
  MESSAGE("GLtrace requires Manta Backend")
ENDIF(NOT GVT_BE_MANTA)

IF(NOT GVT_FE_CONFFILE)
  MESSAGE("GLtrace requires Config File Front end")
ENDIF(NOT GVT_FE_CONFFILE)

FIND_PACKAGE(Manta)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

SET(FILE_CONFIG_LIB ${MPE_LIB2} ${MPE_LIB1} ${MPI_LIBRARIES} ${Boost_LIBRARIES})

FILE(GLOB_RECURSE GVT_GLTRACE_SRC ${PROJECT_SOURCE_DIR}/*.cpp
  ${PROJECT_SOURCE_DIR}/*.C)
FILE(GLOB_RECURSE GVT_GLTRACE_HDR ${PROJECT_SOURCE_DIR}/*.h
  ${PROJECT_SOURCE_DIR}/*.hpp)

IF(GVT_BE_MANTA)
    INCLUDE_DIRECTORIES(${GVTMANTA_INCLUDE_DIRS})
    SET(FILE_CONFIG_LIB ${FILE_CONFIG_LIB} ${MANTA_TARGET_LINK_LIBRARIES})
    SET(FILE_CONFIG_LIB ${FILE_CONFIG_LIB} "GVTMANTA")
ENDIF(GVT_BE_MANTA)

IF(GVT_BE_OPTIX) 
    INCLUDE_DIRECTORIES(${GVTOPTIX_INCLUDE_DIRS})
    SET(FILE_CONFIG_LIB ${FILE_CONFIG_LIB} "GVTOPTIX" ${GVTOPTIX_LIBRARIES})
ENDIF(GVT_BE_OPTIX)

message("GLtrace file config lib is : ${FILE_CONFIG_LIB}")

include_directories("${GLUT_INSTALL}/include")
find_library(GLUTLIB glut)
if(GLUTLIB)
	set(EXTRA_LIBS ${EXTRA_LIBS} ${GLUTLIB})
endif(GLUTLIB)
find_library(GLULIB GLU)
if(GLULIB)
	set(EXTRA_LIBS ${EXTRA_LIBS} ${GLULIB})
endif(GLULIB)

ADD_EXECUTABLE(${PROJECT_NAME} ${GVT_GLTRACE_SRC} ${GVT_GLTRACE_HDR})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} GVTCORE GVTCONFFILE ${FILE_CONFIG_LIB}
${EXTRA_LIBS}) 

CONFIGURE_LIB_MPI()
