PROJECT(MPItrace)
SET(GVT_APP_MPITRACE OFF CACHE BOOL "Build ConfigFile Backend")

IF (GVT_APP_MPITRACE)

    IF(NOT GVT_BE_MANTA)
        MESSAGE("MPI trace requires Manta Backend")
    ENDIF()

    IF(NOT GVT_FE_CONFFILE)
        MESSAGE("MPI trace requires Config File Front end")
    ENDIF()

    FIND_PACKAGE(Manta)

    INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
    
    FILE(GLOB_RECURSE GVT_MPITRACE_SRC ${PROJECT_SOURCE_DIR}/*.cpp ${PROJECT_SOURCE_DIR}/*.C)
    FILE(GLOB_RECURSE GVT_MPITRACE_HDR ${PROJECT_SOURCE_DIR}/*.h ${PROJECT_SOURCE_DIR}/*.hpp)

    ADD_EXECUTABLE(${PROJECT_NAME} ${GVT_MPITRACE_SRC} ${GVT_MPITRACE_HDR})
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} GVTCORE GVTMANTA GVTCONFFILE ${MANTA_TARGET_LINK_LIBRARIES} ${MPI_LIBRARIES} ${Boost_LIBRARIES} ) 
    CONFIGURE_LIB_MPI()

ENDIF()
